# root-editor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  editor  editor.c  editor.h  file_io.c  input_handling.c  install.sh  issue.txt  main.c  rendering.c  root_OS.img  selection.c  syntax.c  test_syntax.c  uninstall.sh
boot/: boot.asm
config/: syntax.json
github/: structure.txt  test.rs
kernel/: kernel.asm
plugins/: CMakeLists.txt  Makefile  theme_plugin.c  word_count_plugin.c
scripts/: install.sh  uninstall.sh
src/: editor.c  editor.h  file_io.c  input_handling.c  main.c  plugin.c  plugin.h  rendering.c  selection.c  syntax.c  syntax_json.c
src/core/: editor.c  editor.h  main.c  plugin.c
src/io/: file_io.c
src/selection/: selection.c
src/syntax/: syntax.c  syntax_json.c
src/ui/: input_handling.c  rendering.c
