cmake_minimum_required(VERSION 3.10)
project(plugins)
find_package(Curses REQUIRED)
file(GLOB SOURCES "*.c")
foreach(SRC ${SOURCES})
    get_filename_component(TARGET ${SRC} NAME_WE)
    add_library(${TARGET} SHARED ${SRC})
    target_link_libraries(${TARGET} ${CURSES_LIBRARIES})
    target_compile_options(${TARGET} PRIVATE -Wall -Wextra -std=c99 -O2 -fPIC)
endforeach()